sfdx-source/force-app/main/default/objects/Mx_Fraud_Document__c/Mx_Fraud_Document__c.object-meta.xml
<CustomObject>
    <description>LEM-15836: It is used to store all required documents and validation details for fraud verification purposes.</description>
    <label>Mx Fraud Document</label>
    <nameField>
        <displayFormat>MX-{YY}{MM}{DD}{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mx Fraud Documents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>