sfdx-source/force-app/main/default/objects/Mx_Fraud_Document__c/fields/Document_Title__c.field-meta.xml
<CustomField>
    <fullName>Document_Title__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15836: It stores the Content Version&apos;s document title uploaded for fraud verification.</description>
    <label>Document Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>