sfdx-source/force-app/main/default/objects/Mx_Fraud_Document__c/fields/Document_Version__c.field-meta.xml
<CustomField>
    <fullName>Document_Version__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15836: It is used to store the current version of the associated Content version document.</description>
    <label>Document Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>