sfdx-source/force-app/main/default/objects/Mx_Fraud_Document__c/fields/Mx_Country__c.field-meta.xml
<CustomField>
    <fullName>Mx_Country__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15836: It indicates the Store&apos;s Country code Information to store the document. This is controlling field for document type.</description>
    <label>Mx Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>AU</fullName>
            </value>
            <value>
                <fullName>NZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>