sfdx-source/force-app/main/default/objects/Mx_Fraud_Document__c/fields/Mx_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Mx_Document_Type__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15836: It stores all document type and dependent on country code. This is not a restricted picklist so it allows user to insert new value.</description>
    <label>Mx Document Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Mx_Country__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ABN Document</fullName>
            </value>
            <value>
                <fullName>Business License</fullName>
            </value>
            <value>
                <fullName>DBA (Doing Business As)</fullName>
            </value>
            <value>
                <fullName>EIN Verification Letter (147C)</fullName>
            </value>
            <value>
                <fullName>Food License</fullName>
            </value>
            <value>
                <fullName>Form SS-4</fullName>
            </value>
            <value>
                <fullName>HST/GST Document</fullName>
            </value>
            <value>
                <fullName>NZBN Document</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Photo Identification Back</fullName>
            </value>
            <value>
                <fullName>Photo Identification Front</fullName>
            </value>
            <value>
                <fullName>W9 with Schedule C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>