sfdx-source/force-app/main/default/objects/Mx_Fraud_Document__c/fields/Mx_Document_Verification_Notes__c.field-meta.xml
<CustomField>
    <fullName>Mx_Document_Verification_Notes__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15836: It stores the Document Verification Notes or Comments.</description>
    <label>Mx Document Verification Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>