sfdx-source/force-app/main/default/objects/Mx_Fraud_Document__c/fields/Mx_Store_Id__c.field-meta.xml
<CustomField>
    <fullName>Mx_Store_Id__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>LEM-15836: It associates the Mx Fraud Document to the Store Account record.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mx Fraud Documents</relationshipLabel>
    <relationshipName>Mx_Fraud_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>