sfdx-source/force-app/main/default/objects/Mx_Fraud_Document__c/fields/Store_Id__c.field-meta.xml
<CustomField>
    <fullName>Store_Id__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15836: It stores the Store Id (External Id) based on Content Version associated.</description>
    <label>Store Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>