sfdx-source/force-app/main/default/objects/Mx_Fraud_Document__c/fields/Work_Plan__c.field-meta.xml
<CustomField>
    <fullName>Work_Plan__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-15836: It associates the Mx Fraud Document to the Work Plan record.</description>
    <label>Work Plan</label>
    <referenceTo>WorkPlan</referenceTo>
    <relationshipLabel>Mx Fraud Documents</relationshipLabel>
    <relationshipName>Mx_Fraud_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>