sfdx-source/force-app/main/default/objects/Mx_Fraud_Document__c/validationRules/Validate_Mx_Country_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Mx_Country_Required</fullName>
    <active>true</active>
    <description>LEM-15836: It ensures that the Mx Country is added to “Mx Fraud Document” record.</description>
    <errorConditionFormula>AND(
        NOT($Permission.Bypass_Mx_Fraud_Document_Validation_Rules),
        ISBLANK(TEXT(Mx_Country__c))
      )</errorConditionFormula>
    <errorMessage>Mx Country is required.</errorMessage>
</ValidationRule>